force-app/main/default/objects/Order_Sync_Log__c/Order_Sync_Log__c.object-meta.xml
<CustomObject>
    <label>Order Sync Log</label>
    <pluralLabel>Order Sync Logs</pluralLabel>
    <nameField>
        <label>Log Name</label>
        <type>AutoNumber</type>
        <displayFormat>SYNCLOG-{000000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Audit log of every order sync attempt to middleware/ERP. Provides durable error tracking, SOX compliance trail, and debugging data.</description>
</CustomObject>