force-app/main/default/objects/Order_Sync_Log__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <label>Error Message</label>
    <type>LongTextArea</type>
    <length>32000</length>
    <description>Detailed error information if the sync attempt failed.</description>
</CustomField>