force-app/main/default/objects/Order_Sync_Log__c/fields/Is_Retryable__c.field-meta.xml
<CustomField>
    <fullName>Is_Retryable__c</fullName>
    <label>Is Retryable</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Whether this failure is transient and eligible for automatic retry.</description>
</CustomField>