force-app/main/default/objects/Order_Sync_Log__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Order</label>
    <type>Lookup</type>
    <referenceTo>Order__c</referenceTo>
    <relationshipName>Sync_Logs</relationshipName>
    <relationshipLabel>Sync Logs</relationshipLabel>
    <required>true</required>
    <description>Parent order record this sync log belongs to.</description>
</CustomField>