force-app/main/default/objects/Order_Sync_Log__c/fields/Request_Payload_Hash__c.field-meta.xml
<CustomField>
    <fullName>Request_Payload_Hash__c</fullName>
    <label>Request Payload Hash</label>
    <type>Text</type>
    <length>64</length>
    <description>SHA-256 hash of the outbound request payload for dedup and audit.</description>
</CustomField>