force-app/main/default/objects/Order_Sync_Log__c/fields/Response_Body__c.field-meta.xml
<CustomField>
    <fullName>Response_Body__c</fullName>
    <label>Response Body</label>
    <type>LongTextArea</type>
    <length>32000</length>
    <description>Raw response body from middleware for debugging.</description>
</CustomField>