force-app/main/default/objects/Order_Sync_Log__c/fields/Response_Code__c.field-meta.xml
<CustomField>
    <fullName>Response_Code__c</fullName>
    <label>Response Code</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <description>HTTP status code returned by middleware.</description>
</CustomField>