force-app/main/default/objects/Order_Sync_Log__c/fields/Retry_Attempt_Number__c.field-meta.xml
<CustomField>
    <fullName>Retry_Attempt_Number__c</fullName>
    <label>Retry Attempt Number</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <description>Which retry attempt this log entry represents (0 = first try).</description>
</CustomField>