force-app/main/default/objects/Order_Sync_Log__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Text</type>
    <length>50</length>
    <description>Sync outcome for this attempt (Synced, Error, Pending, Failed).</description>
</CustomField>