force-app/main/default/objects/Order_Sync_Log__c/fields/Sync_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Sync_Timestamp__c</fullName>
    <label>Sync Timestamp</label>
    <type>DateTime</type>
    <required>true</required>
    <description>When this sync attempt occurred.</description>
</CustomField>